[gd_scene load_steps=6 format=3 uid="uid://cf23fyywihvnp"]

[ext_resource type="Script" path="res://scripts/scene_manager.gd" id="1_up72o"]
[ext_resource type="PackedScene" uid="uid://dxghskvs8p4rw" path="res://scenes/start_screen.tscn" id="2_uyav0"]
[ext_resource type="PackedScene" uid="uid://d4m41mvbdpie6" path="res://scenes/game_over.tscn" id="3_hqv5y"]
[ext_resource type="Texture2D" uid="uid://cck873lkmicll" path="res://assets/Backgrounds/StartScene.png" id="3_w3ek2"]
[ext_resource type="AudioStream" uid="uid://gtdn71485hdo" path="res://assets/Sounds/mouseclick.wav" id="4_113ga"]

[node name="SceneManager" type="Node2D"]
script = ExtResource("1_up72o")

[node name="StartScreen" parent="." instance=ExtResource("2_uyav0")]

[node name="Background" type="Sprite2D" parent="StartScreen"]
position = Vector2(-1.49996, -1.50002)
scale = Vector2(7.23125, 7.23333)
texture = ExtResource("3_w3ek2")

[node name="GameOver" parent="." instance=ExtResource("3_hqv5y")]
visible = false

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_113ga")

[connection signal="pressed" from="StartScreen/UI/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="StartScreen/UI/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="GameOver/UI/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="GameOver/UI/MainMenu" to="." method="_on_main_menu_pressed"]

[editable path="StartScreen"]
[editable path="GameOver"]
